# zypp-boot-plugin

./: INSTALL.md  NEWS  README.md  meson.build  meson_options.txt  zypp-boot-plugin.conf
conf/: zypp-boot-plugin.conf
man/: meson.build  zypp-boot-plugin.8.xml
src/: solvable-matcher.cc  solvable-matcher.h  stomp.cc  zypp-boot-plugin.cc  zypp-commit-plugin.cc  zypp-commit-plugin.h  zypp-plugin.cc  zypp-plugin.h
tests/: kernel.protocol  meson.build  multi.protocol  no_match.protocol  package_name.protocol  provides.protocol  tst_kernel.sh  tst_multi.sh  tst_no_match.sh  tst_overwrite1.sh  tst_overwrite2.sh  tst_package_name.sh  tst_provides.sh  tst_zypper_dup.sh  tst_zypper_dup2.sh  zypp-boot-plugin.conf  zypper_dup.protocol  zypper_dup2.protocol
testsuite/: Makefile  Makefile.in
